@@ -2,7 +2,7 @@
 # Kernel/Modules/AgentTicketActionCommon.pm - common file for several modules
 # Copyright (C) 2001-2012 OTRS AG, http://otrs.org/
 # --
-# $Id: AgentTicketActionCommon.pm,v 1.74 2012/01/24 00:08:45 cr Exp $
+# $Id: AgentTicketActionCommon.pm,v 1.75 2012/02/03 18:23:12 cr Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -891,7 +891,7 @@ sub Run {
                     Data         => $Owners,
                     SelectedID   => $GetParam{NewOwnerID},
                     Translation  => 0,
-                    PossibleNone => 1,
+                    PossibleNone => 0,
                     Max          => 100,
                 },
                 {
@@ -899,7 +899,7 @@ sub Run {
                     Data         => $OldOwners,
                     SelectedID   => $GetParam{OldOwnerID},
                     Translation  => 0,
-                    PossibleNone => 1,
+                    PossibleNone => 0,
                     Max          => 100,
                 },
                 {
@@ -1601,7 +1601,7 @@ sub _GetOwners {
         my $GID = $Self->{QueueObject}->GetQueueGroupID( QueueID => $Param{QueueID} );
         my %MemberList = $Self->{GroupObject}->GroupMemberList(
             GroupID => $GID,
-            Type    => 'note',
+            Type    => 'owner',
             Result  => 'HASH',
             Cached  => 1,
         );
