@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2012 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.2165 2012/02/03 14:26:37 mg Exp $
+# $Id: CHANGES,v 1.2166 2012/02/03 18:23:12 cr Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,7 @@
 # --
 
 3.1.1 2012-02-??
+ - 2012-02-03 Fixed bug#8137 - Issues with Owner list refresh when selecting a new Owner.
  - 2012-02-03 Fixed bug#8180 - bin/otrs.LoaderCache.pl exit code is wrong.
 
 3.1.0.rc1 2012-02-07
